--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build2": "cp -r dist/ ./../WebPage/vue-admin-web/"
   },
   "dependencies": {
     "element-ui": "^2.4.11",
